--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BookActivity"></activity>
+        <activity android:name=".ReadingNowActivity"></activity>
+        <activity android:name=".BookActivity" />
         <activity android:name=".ListOfBooksActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
