--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ReadingNowActivity"></activity>
-        <activity android:name=".BookActivity" />
-        <activity android:name=".ListOfBooksActivity" />
+        <activity android:name=".ReadingNowActivity"
+            android:label="Reading Now"/>
+        <activity android:name=".BookActivity"
+            android:label="Book"/>
+        <activity
+            android:label="List of Books"
+            android:name=".ListOfBooksActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
